bad/mod_invalid_types_int_void.example_compiler_output
ERROR
[1mbad/mod_invalid_types_int_void.lat:5:5: [1;31merror: [0;1mmodulo is defined only for int values, not `int` and `void`[m
	42 % foo();
	   [1;32m^[m
